# rust-statsd-server

./: Cargo.toml  Dockerfile  buildbuilder  buildcentos7  buildmusl
schema/: statsd_batch.capnp
src/: backend.rs  buckets.rs  cli.rs  main.rs  management.rs  metric.rs  server.rs  statsd_batch.rs
src/backends/: graphite.rs  statsd.rs  statsd_zmq.rs
