[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[package]
name = "statsd"
version = "0.1.1"
authors = ["Mark Story <mark@mark-story.com>"]
edition = "2018"

[dependencies]
docopt = "^0.8"
serde_derive = "^1.0.8"
serde = "^1.0.8"
time = "^0.1"
futures = "0.3.5"

[dependencies.tokio]
version = "0.2.22"
features = ["udp", "rt-core", "rt-threaded"]

[dependencies.tokio-util]
version = "0.3.1"
features = ["udp", "codec"]
