[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[package]
name = "statsd"
version = "0.1.1"
authors = ["Mark Story <mark@mark-story.com>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
capnpc = "0.14.2"

[dependencies]
docopt = "^0.8"
serde_derive = "^1.0.8"
serde = "^1.0.8"
time = "^0.1"
tokio-core = "0.1.17"
futures = "0.1.20"
capnp = "0.14.0"
zmq = { version = "0.9.2", features = ['vendored'] }
lz4 = "1.23.2"
